nucleo-picker-vt/tests/scenarios/snapshots/scenarios__preview__toggle_preview@shown.snap
---
source: nucleo-picker-vt/tests/scenarios/preview.rs
assertion_line: 381
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: shown
  name_expression: "\"shown\""
  sequence: 1
---
version: 1
size:
  cols: 30
  rows: 5
screen: alternate
cursor:
  position:
    x: 2
    y: 4
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - "                 ╭───────────╮"
  - "                 │3 c        │"
  - ▌ a rather long …│4 d        │
  - "  1/1 ───────────│5 e        │"
  - ">                ╰───────────╯"
styles:
  - row: 1
    start: 18
    end: 19
    background: "#1d1f21"
  - row: 2
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 2
    start: 1
    end: 17
    background: "#666666"
    bold: true
  - row: 2
    start: 18
    end: 19
    background: "#1d1f21"
  - row: 3
    start: 0
    end: 5
    foreground: "#b9ca4a"
    italic: true
  - row: 3
    start: 5
    end: 17
    foreground: "#c5c8c6"
    italic: true
  - row: 3
    start: 18
    end: 19
    background: "#1d1f21"
