nucleo-picker-vt/tests/scenarios/snapshots/scenarios__preview__unicode_clipping_and_styles@styled-unicode.snap
---
source: nucleo-picker-vt/tests/scenarios/preview.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: styled-unicode
  name_expression: "\"styled-unicode\""
  sequence: 1
---
version: 1
size:
  cols: 14
  rows: 9
screen: alternate
cursor:
  position:
    x: 2
    y: 8
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - "       ╭─────╮"
  - "       │12345│"
  - "       │abcd…│"
  - "       │界界…│"
  - "       │éxy  │"
  - "       │👩🏽‍💻XYZ│"
  - ▌ item │ab界Z│
  - "  1/1 ─│     │"
  - ">      ╰─────╯"
styles:
  - row: 2
    start: 8
    end: 12
    foreground: "#b9ca4a"
    bold: true
  - row: 6
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 6
    start: 1
    end: 6
    background: "#666666"
    bold: true
  - row: 7
    start: 0
    end: 5
    foreground: "#b9ca4a"
    italic: true
  - row: 7
    start: 5
    end: 7
    foreground: "#c5c8c6"
    italic: true
